Login, user registration, vendor registration, beginning search, listings page, vendor detail page.

--- a/buildngz_main/static/styles/account.css
+++ b/buildngz_main/static/styles/account.css
@@ -1,5 +1,5 @@
 #login_bg, #register_bg {
-  background: #ccc url(../img/access_bg.jpg) center center no-repeat fixed;
+  background: #ccc url(../images/uploads/office-building-3.jpg) center center no-repeat fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
