--- a/templates/accounts/registerVendor.html
+++ b/templates/accounts/registerVendor.html
@@ -3,145 +3,103 @@
 {% load widget_tweaks %}
 
 {% block content%}
-<div id="page-container" class="main-content-boxed">
 
-    <!-- Main Container -->
-            <!-- Main Container -->
-            <main id="main-container">
-
-              <!-- Page Content -->
-              <div class="bg-image" style="background-image: url({% static 'images/uploads/electrical-system-installation.jpg' %});">
-                  <div class="row mx-0 bg-black-op">
-                    <div class="hero-static col-md-6 col-xl-8 d-none d-md-flex align-items-md-center">
-                        <div class="p-30 invisible" data-toggle="appear">
-                            <p class="font-size-h1 font-w600 text-white mb-5">
-                                We're very happy you are joining our community!
-                            </p>
-                            <p class="font-size-h5 text-white">
-                                <i class="fa fa-angles-right"></i> Create your account today and receive 50% off.
-                            </p>
-                        </div>
-                    </div>
-                      <div class="hero-static col-md-6 col-xl-4 d-flex align-items-center bg-white">
-                          <div class="content content-full">
-                            <!-- Error Messages -->
-                                <!-- LOAD MESSAGES -->
-                                {% include 'includes/alerts.html' %}
-                             <!-- END Error Messages -->
-
-                              <!-- Header -->
-                              <div class="px-30 py-10">
-                                  <h1 class="h2 font-w400 mt-30 mb-10">One simple solution for contractors and design pros</h1>
-                                  <h2 class="h5 font-w400 text-muted mb-0">Attract and win better clients, run profitable projects and deliver a standout customer experience - all in one place.</h5>
-                              </div>
-                              <!-- END Header -->
-
-                              <!-- Sign Up Form -->
-                              <!-- jQuery Validation functionality is initialized with .js-validation-signup class in js/pages/op_auth_signup.min.js which was auto compiled from _es6/pages/op_auth_signup.js -->
-                              <!-- For more examples you can check out https://github.com/jzaefferer/jquery-validation -->
-                              <form action="{% url 'registerVendor' %}" method="post" class="js-validation-signup px-30" enctype="multipart/form-data">
-                                {% csrf_token %}
-
-                                <div class="form-group row">
-                                    <div class="col-12">
-                                        <div class="form-material floating">
-                                          {% render_field form.first_name class="form-control" placeholder=form.first_name.label %}                                            
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group row">
-                                    <div class="col-12">
-                                        <div class="form-material floating">
-                                          {% render_field form.last_name class="form-control" placeholder=form.last_name.label %}
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group row">
-                                    <div class="col-12">
-                                        <div class="form-material floating">
-                                          {% render_field v_form.vendor_name class="form-control" placeholder='Company Name' %}
-                                            
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group row">
-                                    <div class="col-12">
-                                        <div class="form-material floating">
-                                          {% render_field v_form.insurance_cert class="form-control" placeholder=v_form.insurance_cert.label %}
-                                          <small>Please upload a copy of your Certificate or Insurance</small>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group row">
-                                  <div class="col-12">
-                                      <div class="form-material floating">
-                                        {% render_field form.username class="form-control" placeholder=form.username.label %}
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="form-group row">
-                                <div class="col-12">
-                                    <div class="form-material floating">
-                                      {% render_field form.email class="form-control" placeholder=form.email.label %}
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                    <div class="col-12">
-                                        <div class="form-material floating">
-                                          {% render_field form.password class="form-control" placeholder="Password" %}
-                                          <small class="form-text text-muted">Use 8 or more characters, with a mix of letters, numbers and symbols</small>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group row">
-                                    <div class="col-12">
-                                        <div class="form-material floating">
-                                          {% render_field form.confirm_password class="form-control" placeholder="Confirm Password" %}
-                                        </div>
-                                    </div>
-                                </div>
-                                  <div class="form-group row">
-                                    <div class="col-12">
-                                        <div class="custom-control custom-checkbox">
-                                            <input type="checkbox" class="custom-control-input" id="signup-terms" name="signup-terms">
-                                            <label class="custom-control-label" for="signup-terms">I agree to Terms &amp; Conditions</label>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <button type="submit" class="btn btn-sm btn-hero btn-alt-primary">
-                                        <i class="fa fa-plus mr-10"></i> Create Free Pro Account
-                                    </button>
-                                    <div class="mt-30">
-                                        <a class="link-effect text-muted mr-10 mb-5 d-inline-block" href="#" data-toggle="modal" data-target="#modal-terms">
-                                            <i class="fa fa-book text-muted mr-5"></i> Read Terms
-                                        </a>
-                                        <a class="link-effect text-muted mr-10 mb-5 d-inline-block" href="{% url 'login' %}">
-                                            <i class="fa fa-user text-muted mr-5"></i> Sign In
-                                        </a>
-                                    </div>
-                                </div>
-                            </form>
-                            <!-- END Sign Up Form -->
-                          </div>
-                      </div>
-                  </div>
-              </div>
-              <!-- END Page Content -->
-
-          </main>
-          <!-- END Main Container -->
-      </div>
-  <!-- END Main Container -->
+<div class="row d-flex align-items-center">
+  <div class="col-lg-12 col-xl-12">
+    <!-- LOAD MESSAGES -->
+    {% include 'includes/alerts.html' %}
+    <!-- END Error Messages -->
+  </div>
 </div>
-<script src="{% static 'scripts/codebase/codebase.core.min.js' %}"></script>
 
-<script src="{% static 'scripts/codebase/codebase.app.min.js' %}"></script>
+    <div class="container h-200">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-lg-12 col-xl-11">
+          
+            <div class="card-body p-md-5">
+              <div class="row justify-content-center">
+                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Register as Pro</p>
+      
+                  <form action="{% url 'registerVendor' %}" method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                                
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        {% render_field form.first_name class="form-control" placeholder=form.first_name.label %} <br>
+                        {% render_field form.last_name class="form-control" placeholder=form.last_name.label %}
+                      </div>
+                    </div>
+  
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        {% render_field v_form.vendor_name class="form-control" placeholder='Company Name' %}
+                        <label class="form-label" for="form3Example3c">Your Company Name</label>
+                      </div>
+                    </div>
+  
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        {% render_field v_form.insurance_cert class="form-control" placeholder=v_form.insurance_cert.label %}
+                        <small>Please upload a copy of your Certificate or Insurance</small>
+                      </div>
+                    </div>
+  
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        {% render_field form.username class="form-control" placeholder=form.username.label %}
+                        <label class="form-label" for="form3Example3c">Pick a Username</label>
+                      </div>
+                    </div>
+  
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        {% render_field form.email class="form-control" placeholder=form.email.label %}
+                        <label class="form-label" for="form3Example3c">Your Email</label>
+                      </div>
+                    </div>
+  
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        {% render_field form.password class="form-control" placeholder="Password" %}
+                        <label class="form-label" for="form3Example4c">Password</label>
+                      </div>
+                    </div>
+  
+                    <div class="d-flex flex-row align-items-center mb-4">
+                      <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                      <div class="form-outline flex-fill mb-0">
+                        {% render_field form.confirm_password class="form-control" placeholder="Confirm Password" %}
+                        <label class="form-label" for="form3Example4cd">Repeat your password</label>
+                      </div>
+                    </div>
+  
+                <div class="form-check d-flex justify-content-center mb-5">
+                      <label class="form-check-label" for="form2Example3">
+                        I agree all statements in <a href="#!">Terms of service</a>
+                      </label>
+                    </div>
+  
+                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                      <button type="submit" id="submit2" class="btn_1 add_bottom_15"><i class="fa fa-plus mr-10"></i> Create Free Pro Account</button>      
+                    </div>
+                  </form>      
+                </div>
+                <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+                  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp" class="img-fluid" alt="Sample image">      
+                </div>
+              </div>
+            </div>
+          
+        </div>
+      </div>
+    </div>
 
-<!-- Page JS Plugins -->
-<script src="{% static 'scripts/codebase/jquery-validation/jquery.validate.min.js' %}"></script>
 
-<!-- Page JS Code -->
-<script src="{% static 'scripts/codebase/op_auth_signin.min.js' %}"></script>
 {% endblock %}
