--- a/templates/base.html
+++ b/templates/base.html
@@ -18,13 +18,17 @@
     <link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="{% static 'images/apple-touch-icon-144x144-precomposed.png' %}">
 
     <!-- BASE CSS -->
-    <link href="{% static 'styles/bootstrap.css' %}" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="{% static 'styles/style.css' %}" rel="stylesheet">
+    <!-- <link href="{% static 'styles/bootstrap.css' %}" rel="stylesheet"> -->
 
     <!-- SPECIFIC CSS -->
     <link href="{% static 'styles/home.css' %}" rel="stylesheet">
     <link href="{% static 'styles/blog.css' %}" rel="stylesheet">
-
+    <link href="{% static 'styles/account.css' %}" rel="stylesheet">
+    <link href="{% static 'styles/listing.css' %}" rel="stylesheet">
+    <link href="{% static 'styles/detail-page.css' %}" rel="stylesheet">
+    
     <!-- YOUR CUSTOM CSS -->
     <link href="{% static 'styles/custom.css' %}" rel="stylesheet">
 
@@ -63,6 +67,12 @@
 <script src="{% static 'scripts/common_scripts.min.js' %}"></script>
 <script src="{% static 'scripts/common_func.js' %}"></script>
 <script src="{% static 'scripts/validate.js' %}"></script>
+
+<!-- SPECIFIC SCRIPTS -->
+<script src="{% static 'scripts/sticky_sidebar.min.js' %}"></script>
+<script src="{% static 'scripts/specific_detail.min.js' %}"></script>
+<script src="{% static 'scripts/datepicker.min.js' %}"></script>
+<script src="{% static 'scripts/datepicker_func_1.js' %}"></script>
 
 </body>
 </html>
