--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -2,237 +2,187 @@
 {% load static %}
 
 {% block content %}
-<div class="page-content">
+<main class="bg_color">
 
-  <div class="container">
-    <div class="post-image">
-      <img src="{% static 'images/uploads/post-image.jpg' %}" alt="Post Image">
+  <div class="container margin_45_40">			
+    <div class="row">
+      <div class="col-lg-9">
+        <div class="singlepost">
+          <figure><img alt="" class="img-fluid" src="{% static 'images/uploads/post-image.jpg' %}"></figure>
+          <h1>{{ post.title }}</h1>
+          <div class="postmeta">
+            <ul>
+              <li class="tags"><a href="#"><i class="icon_folder-alt"></i> {{ post.tags.all|join:", "}}</a></li>
+              <li><i class="icon_calendar"></i> {{ post.created }}</li>
+              <li><a href="#"><i class="icon_pencil-edit"></i> {{ post.author }}</a></li>
+              <li><i class="icon_comment_alt"></i>&nbsp;
+                {% with comments.count as total_comments %}
+                  ({{ total_comments }}) Comment{{ total_comments|pluralize}}
+                {% endwith %}
+              </li>
+            </ul>
+          </div>
+          <!-- /post meta -->
+          <div class="post-content">
+            <!-- <div class="dropcaps"> -->
+              <p>
+                {{ post.body|safe }}
+              
+
+                <a href="{% url 'post_share' post.id %}">Share this post</a>
+              </p>
+            <!-- </div> -->
+          </div>
+          <!-- /post -->
+        </div>
+        <!-- /single-post -->
+
+        <div id="comments">
+          <h5>Comments</h5>
+          <ul>
+            {% for comment in comments %}
+              <li>
+                <div class="avatar">
+                  <img src="img/avatar1.jpg" alt="">
+                </div>
+                <div class="comment_right clearfix">
+                  <div class="comment_info">
+                    By <a href="">{{comment.name }}</a><span>|</span>{{ comment.created }}
+                  </div>
+                  <p>
+                    {{ comment.body|linebreaks }}
+                  </p>
+                </div>
+                <!-- <ul class="replied-to">
+                  <li>
+                    <div class="avatar">
+                      <a href="#"><img src="img/avatar4.jpg" alt="">
+                      </a>
+                    </div>
+                    <div class="comment_right clearfix">
+                      <div class="comment_info">
+                        By <a href="#">Anna Smith</a><span>|</span>25/10/2019<span>|</span><a href="#">Reply</a>
+                      </div>
+                      <p>
+                        Nam cursus tellus quis magna porta adipiscing. Donec et eros leo, non pellentesque arcu. Curabitur vitae mi enim, at vestibulum magna. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed sit amet sem a urna rutrumeger fringilla. Nam vel enim ipsum, et congue ante.
+                      </p>
+                      <p>
+                        Aenean iaculis sodales dui, non hendrerit lorem rhoncus ut. Pellentesque ullamcorper venenatis elit idaipiscingi Duis tellus neque, tincidunt eget pulvinar sit amet, rutrum nec urna. Suspendisse pretium laoreet elit vel ultricies. Maecenas ullamcorper ultricies rhoncus. Aliquam erat volutpat.
+                      </p>
+                    </div>
+                    <ul class="replied-to">
+                      <li>
+                        <div class="avatar">
+                          <a href="#"><img src="img/avatar6.jpg" alt="">
+                          </a>
+                        </div>
+                        <div class="comment_right clearfix">
+                          <div class="comment_info">
+                            By <a href="#">Anna Smith</a><span>|</span>25/10/2019<span>|</span><a href="#">Reply</a>
+                          </div>
+                          <p>
+                            Nam cursus tellus quis magna porta adipiscing. Donec et eros leo, non pellentesque arcu. Curabitur vitae mi enim, at vestibulum magna. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed sit amet sem a urna rutrumeger fringilla. Nam vel enim ipsum, et congue ante.
+                          </p>
+                          <p>
+                            Aenean iaculis sodales dui, non hendrerit lorem rhoncus ut. Pellentesque ullamcorper venenatis elit idaipiscingi Duis tellus neque, tincidunt eget pulvinar sit amet, rutrum nec urna. Suspendisse pretium laoreet elit vel ultricies. Maecenas ullamcorper ultricies rhoncus. Aliquam erat volutpat.
+                          </p>
+                        </div>
+                      </li>
+                    </ul>
+                  </li>
+                </ul> -->
+              </li>
+              {% empty %}
+                <li>
+                  <div class="comment_right clearfix">
+                    <p>
+                      There are no comments
+                    </p>
+                  </div>
+              </li>
+              {% endfor %}
+          </ul>
+        </div>
+
+        <hr>
+
+        {% include 'blog/comment_form.html' %}
+       
+      </div>
+      <!-- /col -->
+
+      <aside class="col-lg-3">
+        <div class="widget search_blog">
+          <div class="form-group">
+            <input type="text" name="search" id="search" class="form-control" placeholder="Terms...">
+            <span><input type="submit" value="Search"></span>
+          </div>
+        </div>
+        <!-- /widget -->
+        <div class="widget">
+          <div class="widget-title first">
+            <h4>Latest Post</h4>
+          </div>
+          <ul class="comments-list">
+            <li>
+              <div class="alignleft">
+                <a href="#0"><img src="img/blog-5.jpg" alt=""></a>
+              </div>
+              <small>Category - 11.08.2016</small>
+              <h3><a href="#" title="">Verear qualisque ex minimum...</a></h3>
+            </li>
+            <li>
+              <div class="alignleft">
+                <a href="#0"><img src="img/blog-6.jpg" alt=""></a>
+              </div>
+              <small>Category - 11.08.2016</small>
+              <h3><a href="#" title="">Verear qualisque ex minimum...</a></h3>
+            </li>
+            <li>
+              <div class="alignleft">
+                <a href="#0"><img src="img/blog-4.jpg" alt=""></a>
+              </div>
+              <small>Category - 11.08.2016</small>
+              <h3><a href="#" title="">Verear qualisque ex minimum...</a></h3>
+            </li>
+          </ul>
+        </div>
+        <!-- /widget -->
+        <div class="widget">
+          <div class="widget-title">
+            <h4>Categories</h4>
+          </div>
+          <ul class="cats">
+            <li><a href="#">Dermatology <span>(12)</span></a></li>
+            <li><a href="#">Consulting <span>(21)</span></a></li>
+            <li><a href="#">Treatments <span>(44)</span></a></li>
+            <li><a href="#">Personal care <span>(31)</span></a></li>
+          </ul>
+        </div>
+        <!-- /widget -->
+        <div class="widget">
+          <div class="widget-title">
+            <h4>Popular Tags</h4>
+          </div>
+          <div class="tags">
+            <a href="#">Lawyer</a>
+            <a href="#">Accounting</a>
+            <a href="#">Consulting</a>
+            <a href="#">Doctors</a>
+            <a href="#">Best Offers</a>
+            <a href="#">Languages</a>
+            <a href="#">Teach</a>
+          </div>
+        </div>
+        <!-- /widget -->
+      </aside>
+      <!-- /aside -->
     </div>
-    <div class="col-lg-8 offset-lg-2">
-      <header class="entry-header">
-        <h1 class="entry-title">{{ post.title }}</h1>
-        <p class="entry-byline c-dusty-gray">
-          <a href="#">{{ post.created }}</a>
-          by <a href="#">{{ post.author }}</a>
-        </p>
-      </header><!-- .entry-header -->
-
-      <div class="entry-content">
-        {{ post.body|safe}}
-      </div><!-- .entry-content -->
-
-      <div class="entry-meta">
-        <div class="entry-tags">
-          <a href="#">haintheme</a>
-          <a href="#">listiry blog</a>
-          <a href="#">directory</a>
-          <a href="#">listing</a>
-        </div>
-
-        <ul class="min-list inline-list social-list">
-          <li>
-            <a href="#">
-              <i class="fa fa-facebook-f"></i>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="fa fa-twitter"></i>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="fa fa-pinterest"></i>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="fa fa-google-plus"></i>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="fa fa-linkedin"></i>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="fa fa-instagram"></i>
-            </a>
-          </li>
-        </ul>
-      </div><!-- .entry-meta -->
-
-      <div class="nav-links">
-        <div class="nav-link nav-previous">
-          <a href="#">
-            <span class="screen-reader-text">Previous post:</span>
-            <span class="nav-link-text">Previous:</span>
-            <h3 class="nav-link-title">Why Cheap Flights Aren't Always Best to Buy</h3>
-          </a>
-        </div>
-
-        <div class="nav-link nav-next">
-          <a href="#">
-            <span class="screen-reader-text">Next post:</span>
-            <span class="nav-link-text">Next:</span>
-            <h3 class="nav-link-title">5 Steps to Book a Cheap Flight Online</h3>
-          </a>
-        </div>
-      </div><!-- .nav-links -->
-
-      <div id="comments" class="comments-area">
-        <div class="comments-wrap">
-          <h3 class="comments-title">3 Comments</h3>
-          <ol class="min-list comment-list">
-            <li class="comment">
-              <article>
-                <div class="comment-wrapper">
-                  <div class="comment-avatar">
-                    <img src="{% static 'images/uploads/james-turner.jpg' %}" alt="James Turner">
-                  </div><!-- .comment-avatar -->
-
-                  <div class="comment-content">
-                    <header class="comment-header">
-                      <h4 class="comment-author">James Turner</h4>
-                      <span class="comment-time c-gray">December 11, 2017</span>
-                    </header>
-
-                    <div class="comment-body c-dove-gray">
-                      <p>
-                        Great interview. I love a success story, and even more so when the guy still has humility like
-                        that. Hadn’t heard of him, but now off to check out his site…I’d like to visit Slovakia (or
-                        Greece, Slovenia, ad infinitum) this summer!
-                      </p>
-                      <p>Thanks Matt and Scott!</p>
-                    </div>
-
-                    <div class="comment-reply">
-                      <a href="#">Reply</a>
-                    </div>
-                  </div><!-- .comment-content -->
-                </div><!-- .comment-wrapper -->
-              </article>
-              <ul class="children">
-                <li class="comment">
-                  <article>
-                    <div class="comment-wrapper">
-                      <div class="comment-avatar">
-                        <img src="{% static 'images/uploads/nomadic-matt.jpg' %}" alt="Nomadic Matt">
-                      </div><!-- .comment-avatar -->
-
-                      <div class="comment-content">
-                        <header class="comment-header">
-                          <h4 class="comment-author">NomadicMatt</h4>
-                          <span class="comment-time c-gray">December 14, 2017</span>
-                        </header>
-
-                        <div class="comment-body c-dove-gray">
-                          <p>Those are great deals! Very cool!</p>
-                        </div>
-
-                        <div class="comment-reply">
-                          <a href="#">Reply</a>
-                        </div>
-                      </div><!-- .comment-content -->
-                    </div><!-- .comment-wrapper -->
-                  </article>
-                </li><!-- .comment -->
-              </ul>
-            </li><!-- .comment -->
-
-            <li class="comment">
-              <article>
-                <div class="comment-wrapper">
-                  <div class="comment-avatar">
-                    <img src="{% static 'images/uploads/ryan-biddulph.jpg' %}" alt="Ryan Biddulph">
-                  </div><!-- .comment-avatar -->
-
-                  <div class="comment-content">
-                    <header class="comment-header">
-                      <h4 class="comment-author">James Turner</h4>
-                      <span class="comment-time c-gray">December 11, 2017</span>
-                    </header>
-
-                    <div class="comment-body c-dove-gray">
-                      <p>
-                        Scott’s is the best! We scored RT tickets to South Africa from DC for $375 recently and $450
-                        tickets to Bangkok RT from DC a few months before.
-                      </p>
-                    </div>
-
-                    <div class="comment-reply">
-                      <a href="#">Reply</a>
-                    </div>
-                  </div><!-- .comment-content -->
-                </div><!-- .comment-wrapper -->
-              </article>
-            </li><!-- .comment -->
-          </ol><!-- .comment-list -->
-        </div><!-- .comments-wrap -->
-
-        <div class="comments-wrap">
-          <h3 class="comments-title">Leave a Reply</h3>
-          <form class="comment-form" action="/" method="post">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label for="author">Your name *</label>
-                  <input
-                    type="text"
-                    name="author"
-                    id="author"
-                    class="form-input form-input--square form-input--border-c-alto"
-                    placeholder="Enter your full name"
-                    required
-                  >
-                </div>
-              </div><!-- .col -->
-
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label for="email">Your email *</label>
-                  <input
-                    type="email"
-                    name="email"
-                    id="email"
-                    class="form-input form-input--square form-input--border-c-alto"
-                    placeholder="Enter your email"
-                    required
-                  >
-                </div>
-              </div><!-- .col -->
-
-              <div class="col-md-12">
-                <div class="form-group">
-                  <label for="comment">Your comment</label>
-                  <textarea
-                    class="form-input form-input--square form-input--border-c-alto"
-                    rows="8"
-                    id="comment"
-                    name="comment"
-                    placeholder="Comment here"
-                  ></textarea>
-                </div>
-              </div><!-- .col -->
-
-              <div class="col-md-12">
-                <div class="form-group--submit">
-                  <button
-                    class="button button--square button--primary button--large button--submit"
-                    type="submit"
-                  >
-                    Post Comment
-                  </button>
-                </div>
-              </div><!-- .col -->
-            </div><!-- .row -->
-          </form><!-- .comment-form -->
-        </div><!-- .comments-wrap -->
-      </div><!-- #comments -->
-    </div><!-- .col -->
-  </div><!-- .container -->
-
-</div><!-- .page-content -->
+    <!-- /row -->	
+  </div>
+  <!-- /container -->
+  
+</main>
+<!-- /main -->
 
 {% endblock %}
