--- a/templates/home.html
+++ b/templates/home.html
@@ -3,43 +3,56 @@
 
 {% block content %}
 <main>
-  <div class="hero_single version_2 full_height">
-    <div class="opacity-mask" data-opacity-mask="rgba(0, 0, 0, 0)">
-      <div class="container">
-        <div class="row">
-          <div class="col-xl-9 col-lg-10">
-            <h1>Find a Professional</h1>
-            <p>Book a Consultation by Appointment, Chat or Video call</p>
-            <form method="post" action="grid-listing-1.html">
-              <div class="row g-0 custom-search-input">
-                <div class="col-md-9">
-                  <div class="form-group">
-                    <input class="form-control" type="text" placeholder="Find a professional...">
-                  </div>
+    <div class="hero_single version_2 full_height">
+        <div class="opacity-mask" data-opacity-mask="rgba(0, 0, 0, 0)">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12">
+                        <h1>Find a Professional</h1>
+                        <p>Book a Consultation by Appointment, Chat or Video call</p>
+                        <form action="{% url 'search' %}" method="get">
+                            <div class="row g-0 custom-search-input">
+                                <div class="col-md-5">
+                                    <div class="form-group">
+                                        <input class="form-control" type="text" name="vendor_name" placeholder="Find a professional...">
+                                    </div>
+                                </div>
+                                <div class="col-md-5">
+                                    <div class="form-group">
+                                        <select class="form-control" name="radius" id="radius" placeholder="Radius" style="height: 50px; padding-right:10px;" required>
+                                            <option value="" selected>Choose Radius</option>
+                                            <option value="5">5 miles</option>
+                                            <option value="10">10 miles</option>
+                                            <option value="15">15 miles</option>
+                                            <option value="25">25 miles</option>
+                                            <option value="50">50 miles</option>
+                                            <option value="100">100 miles</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="col-md-2">
+                                    <input type="submit" value="Find">
+                                </div>
+                            </div>
+                            <!-- /row -->
+                            <div class="search_trends">
+                                <h5>Trending:</h5>
+                                <ul>
+                                    <li><a href="#0">doctor</a></li>
+                                    <li><a href="#0">lawyer</a></li>
+                                    <li><a href="#0">teacher</a></li>
+                                    <li><a href="#0">psychologist</a></li>
+                                </ul>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <div class="col-md-3">
-                  <input type="submit" value="Find">
-                </div>
-              </div>
-              <!-- /row -->
-              <div class="search_trends">
-                <h5>Trending:</h5>
-                <ul>
-                  <li><a href="#0">doctor</a></li>
-                  <li><a href="#0">lawyer</a></li>
-                  <li><a href="#0">teacher</a></li>
-                  <li><a href="#0">psychologist</a></li>
-                </ul>
-              </div>
-            </form>
-          </div>
+                <!-- /row -->
+                <a href="#first_section" class="btn_explore"><span class="pulse_bt"><i class="fa-solid fa-arrow-down"></i></span></a>
+            </div>
         </div>
-        <!-- /row -->
-        <a href="#first_section" class="btn_explore"><span class="pulse_bt"><i class="fa-solid fa-arrow-down"></i></span></a>
-      </div>
     </div>
-  </div>
-  <!-- /hero_single -->
+    <!-- /hero_single -->
 
   <div class="bg_gray" id="first_section">
       <div class="container margin_60_40">
@@ -49,15 +62,21 @@
               <p>Cum doctus civibus efficiantur in imperdiet deterruisset.</p>
           </div>
           <div class="row">
+            {% for vendor in vendors %}
+
               <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
                   <div class="strip">
                       <figure>
                           <a href="#0" class="wish_bt"><i class="icon_heart"></i></a>
-                          <img src="img/lazy-placeholder.png" data-src="img/professionals_photos/home_1.jpg" class="img-fluid lazy" alt="">
-                          <a href="detail-page.html" class="strip_info">
+                          {% if vendor.user_profile.cover_photo %}
+                            <img src="{{ vendor.user_profile.cover_photo.url }}" data-src="{{ vendor.user_profile.cover_photo.url }}" class="img-fluid lazy" alt="">
+                          {% else %} 
+                            <img src="" data-src="{% static 'images/uploads/plumbing.jpg' %}" class="img-fluid lazy" alt="{% static 'images/uploads/plumbing.jpg' %}">
+                          {% endif %}
+                          <a href="{% url 'vendor_detail' vendor.vendor_slug %}" class="strip_info">
                               <div class="item_title">
-                                  <h3>Dr. Maria Cornfield</h3>
-                                  <small>Pediatrician, Psychologist ...</small>
+                                  <h3>{{ vendor.vendor_name }}</h3>
+                                  <small>{{ vendor.user_profile.city }}, {{ vendor.user_profile.state }} {{ vendor.user_profile.zip_code }}</small>
                               </div>
                           </a>
                       </figure>
@@ -72,116 +91,7 @@
                   </div>
               </div>
               <!-- /strip grid -->
-              <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
-                  <div class="strip">
-                      <figure>
-                          <a href="#0" class="wish_bt"><i class="icon_heart"></i></a>
-                          <img src="img/lazy-placeholder.png" data-src="img/professionals_photos/home_2.jpg" class="img-fluid lazy" alt="">
-                          <a href="detail-page.html" class="strip_info">
-                              <div class="item_title">
-                                  <h3>Lucy Shoemaker</h3>
-                                  <small>Lawyer</small>
-                              </div>
-                          </a>
-                      </figure>
-                      <ul>
-                          <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Available Appointment"><i class="icon-users"></i></a></li>
-                          <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Available Chat"><i class="icon-chat"></i></a></li>
-                          <li>
-                              <div class="score"><span>Superb<em>350 Reviews</em></span><strong>8.9</strong></div>
-                          </li>
-                      </ul>
-                  </div>
-              </div>
-              <!-- /strip grid -->
-              <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
-                  <div class="strip">
-                      <figure>
-                          <a href="#0" class="wish_bt"><i class="icon_heart"></i></a>
-                          <img src="img/lazy-placeholder.png" data-src="img/professionals_photos/home_3.jpg" class="img-fluid lazy" alt="">
-                          <a href="detail-page.html" class="strip_info">
-                              <div class="item_title">
-                                  <h3>Prof. Luke Lachinet</h3>
-                                  <small>Math Teacher</small>
-                              </div>
-                          </a>
-                      </figure>
-                      <ul>
-                          <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Available Appointment"><i class="icon-users"></i></a></li>
-                          <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Available Video Call"><i class="icon-videocam"></i></a></li>
-                          <li>
-                              <div class="score"><span>Superb<em>350 Reviews</em></span><strong>8.9</strong></div>
-                          </li>
-                      </ul>
-                  </div>
-              </div>
-              <!-- /strip grid -->
-              <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
-                  <div class="strip">
-                      <figure>
-                          <a href="#0" class="wish_bt"><i class="icon_heart"></i></a>
-                          <img src="img/lazy-placeholder.png" data-src="img/professionals_photos/home_4.jpg" class="img-fluid lazy" alt="">
-                          <a href="detail-page.html" class="strip_info">
-                              <div class="item_title">
-                                  <h3>Dr. Marta Rainwater</h3>
-                                  <small>Psychologist</small>
-                              </div>
-                          </a>
-                      </figure>
-                      <ul>
-                          <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Available Chat"><i class="icon-chat"></i></a></li>
-                          <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Available Video Call"><i class="icon-videocam"></i></a></li>
-                          <li>
-                              <div class="score"><span>Superb<em>350 Reviews</em></span><strong>8.9</strong></div>
-                          </li>
-                      </ul>
-                  </div>
-              </div>
-              <!-- /strip grid -->
-              <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
-                  <div class="strip">
-                      <figure>
-                          <a href="#0" class="wish_bt"><i class="icon_heart"></i></a>
-                          <img src="img/lazy-placeholder.png" data-src="img/professionals_photos/home_5.jpg" class="img-fluid lazy" alt="">
-                          <a href="detail-page.html" class="strip_info">
-                              <div class="item_title">
-                                  <h3>Tom Manzone</h3>
-                                  <small>Lawyer</small>
-                              </div>
-                          </a>
-                      </figure>
-                      <ul>
-                          <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Available Chat"><i class="icon-chat"></i></a></li>
-                          <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Available Video Call"><i class="icon-videocam"></i></a></li>
-                          <li>
-                              <div class="score"><span>Superb<em>350 Reviews</em></span><strong>8.9</strong></div>
-                          </li>
-                      </ul>
-                  </div>
-              </div>
-              <!-- /strip grid -->
-              <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6">
-                  <div class="strip">
-                      <figure>
-                          <a href="#0" class="wish_bt"><i class="icon_heart"></i></a>
-                          <img src="img/lazy-placeholder.png" data-src="img/professionals_photos/home_6.jpg" class="img-fluid lazy" alt="">
-                          <a href="detail-page.html" class="strip_info">
-                              <div class="item_title">
-                                  <h3>Carl Cornfield</h3>
-                                  <small>Accountant</small>
-                              </div>
-                          </a>
-                      </figure>
-                      <ul>
-                          <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Available Appointment"><i class="icon-users"></i></a></li>
-                          <li><a href="#0" class="tooltip-1" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Available Chat"><i class="icon-chat"></i></a></li>
-                          <li>
-                              <div class="score"><span>Superb<em>350 Reviews</em></span><strong>8.9</strong></div>
-                          </li>
-                      </ul>
-                  </div>
-              </div>
-              <!-- /strip grid -->
+            {% endfor %}
           </div>
           <!-- /row -->
           <p class="text-center add_top_30"><a href="grid-listing-1.html" class="btn_1 medium">Start Searching</a></p>
@@ -197,19 +107,29 @@
       </div>
       <!-- /main_title -->
       <div class="owl-carousel owl-theme categories_carousel add_bottom_45">
-          <div class="item_version_2">
-              <a href="grid-listing-1.html">
+        {% for vendor in vendors %}
+        <div class="item_version_2">
+              <a href="{% url 'listings' %}">
                   <figure>
                       <span>98</span>
-                      <img src="img/home_cat_placeholder.jpg" data-src="img/home_cat_1.jpg" alt="" class="owl-lazy">
+                      {% if vendor.user_profile.cover_photo %}
+                        <img src="{{ vendor.user_profile.cover_photo.url }}" data-src="{{ vendor.user_profile.cover_photo.url }}" alt="" class="owl-lazy">
+                      {% else %}
+                        <img src="" data-src="{% static 'images/uploads/plumbing.jpg' %}" class="img-fluid lazy" alt="{% static 'images/uploads/plumbing.jpg' %}">
+                      {% endif %} 
                       <div class="info">
-                          <h3>Gynecologist</h3>
-                          <small>Avg price $40</small>
+                          <h3>{{ vendor.vendor_name }}</h3>
+                          <small>
+                            {{ vendor.user_profile.address }}
+                            <br>
+                            {{ vendor.user_profile.city }}, {{ vendor.user_profile.state }} {{ vendor.user_profile.zip_code }}
+                          </small>
                       </div>
                   </figure>
               </a>
           </div>
-          <div class="item_version_2">
+          {% endfor %}
+          <!-- <div class="item_version_2">
               <a href="grid-listing-1.html">
                   <figure>
                       <span>87</span>
@@ -280,7 +200,7 @@
                       </div>
                   </figure>
               </a>
-          </div>
+          </div> -->
       </div>
       <!-- /carousel -->
       <div class="row">
