--- a/templates/includes/alerts.html
+++ b/templates/includes/alerts.html
@@ -1,10 +1,17 @@
 {% if messages %}
     {% for message in messages %}
-      <div class="alert alert-{{message.tags}} show-notifications alert-dismissible fade show" role="alert">
+      <!-- <div class="alert alert-{{message.tags}} show-notifications alert-dismissible fade show" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
         <strong>{{message}}</strong>
-      </div>        
+      </div> -->
+      
+      <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong>{{message}}</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>      
     {% endfor %}
 {% endif %}
