--- a/templates/includes/v_topnavbar.html
+++ b/templates/includes/v_topnavbar.html
@@ -17,50 +17,50 @@
                         </div>
                     </li> -->
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link " href="{% url 'vendorDashboard' %}" id="topnav-email" role="button">
+                    <li class="nav-item ">
+                        <a class="nav-link " href="{% url 'vendorDashboard' %}">
                             <i class="mdi mdi-home mr-2"></i>Home
                         </a>
                     </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link " href="{% url 'vendorCalendar' %}" id="topnav-email" role="button">
+                    <li class="nav-item ">
+                        <a class="nav-link " href="{% url 'vendorCalendar' %}">
                             <i class="mdi mdi-calendar mr-2"></i>Calendar
                         </a>
                     </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link" href="{% url 'vendorInbox' %}" id="topnav-advanced" role="button">
+                    <li class="nav-item ">
+                        <a class="nav-link" href="{% url 'vendorInbox' %}">
                             <i class="mdi mdi-message-text-clock-outline mr-2"></i>Messages
                         </a>
                     </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle arrow-none" href="{% url 'customers' %}" id="topnav-pages" role="button">
+                    <li class="nav-item ">
+                        <a class="nav-link" href="{% url 'customers' %}">
                             <i class="mdi mdi-cogs mr-2"></i>Customers
                         </a>
                     </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle arrow-none" href="{% url 'vendors' %}" id="topnav-pages" role="button">
+                    <li class="nav-item ">
+                        <a class="nav-link" href="{% url 'vendors' %}">
                             <i class="mdi mdi-cogs mr-2"></i>Vendors
                         </a>
                     </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle arrow-none" href="{% url 'incomeTracker' %}" id="topnav-charts" role="button">
+                    <li class="nav-item ">
+                        <a class="nav-link" href="{% url 'incomeTracker' %}">
                             <i class="mdi mdi-coin-outline mr-2"></i>Income Tracker
                         </a>
                     </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle arrow-none" href="{% url 'billTracker' %}" id="topnav-charts" role="button">
+                    <li class="nav-item ">
+                        <a class="nav-link" href="{% url 'billTracker' %}">
                             <i class="mdi mdi-coin-outline mr-2"></i>Bill Tracker
                         </a>
                     </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle arrow-none" href="{% url 'vendorListings' %}" id="topnav-pages" role="button">
+                    <li class="nav-item ">
+                        <a class="nav-link" href="{% url 'vendorListings' %}">
                             <i class="mdi mdi-chart-bar mr-2"></i>Leads 
                         </a>
                     </li>
